--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ user:
   name: whfox
   pic: /assets/img/cat.jpg
   picAlt: "whfox"
-  job: some records
+  job: 不说话装高手
   aboutme: true # comment this out if you don't need the 'about' page.
 
 exclude:
